[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "handygenome"
version = "0.4.0"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "Bio>=1.80",
    "pysam",
    "pyranges",
    "scipy",
    "sklearn",
    "yaml",
    "IPython",
]
authors = [
    {name="Ji-Hyung Park", email="p69180@gmail.com"},
]
description = "An integrated platform for genome sequencing analysis"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
